Fix text-align for index

--- a/stylesheets/guide.css
+++ b/stylesheets/guide.css
@@ -30,6 +30,9 @@ main {
   max-width: 800px;
   margin: 0 auto;
   line-height: 1.5em;
+}
+
+.center {
   text-align: center;
 }
 
